# SilkEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  LICENSE  OldCMakeLists.txt  README.md  build.bat  main.cpp
docs/templates/src/: CMakeLists.txt
projects/: CMakeLists.txt
sandbox/src/: CMakeLists.txt
sandbox/src/core/: sandbox.cpp  sandbox.h  sandbox_app.cpp  sandbox_app.h
silk_engine/: CMakeLists.txt  entry_point.h
silk_engine/core/: application.cpp  application.h  base.h  event.h  log.cpp  log.h  platform.h
silk_engine/core/input/: input.cpp  input.h  joystick.cpp  joystick.h  keys.h
silk_engine/gfx/: command_queue.cpp  command_queue.h  debug_messenger.cpp  debug_messenger.h  debug_renderer.cpp  debug_renderer.h  enums.h  event.cpp  event.h  fence.cpp  fence.h  gpu_type.h  graphics.cpp  graphics.h  instance.cpp  instance.h  material.cpp  material.h  particle_system.cpp  particle_system.h  per_frame.h  queue.cpp  queue.h  render_context.cpp  render_context.h  renderer.cpp  renderer.h  semaphore.cpp  semaphore.h  vulkan_object.cpp  vulkan_object.h
silk_engine/gfx/allocators/: allocation.cpp  allocation.h  allocator.cpp  allocator.h  command_pool.cpp  command_pool.h  query_pool.cpp  query_pool.h
silk_engine/gfx/buffers/: buffer.cpp  buffer.h  buffer_layout.h  command_buffer.cpp  command_buffer.h  framebuffer.cpp  framebuffer.h  index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
silk_engine/gfx/debug/: debug_renderer.cpp  debug_renderer.h
silk_engine/gfx/descriptors/: descriptor_allocator.cpp  descriptor_allocator.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h
silk_engine/gfx/devices/: logical_device.cpp  logical_device.h  physical_device.cpp  physical_device.h  queue.cpp
silk_engine/gfx/images/: image.cpp  image.h  image_view.cpp  image_view.h  raw_image.cpp  raw_image.h  sampler.cpp  sampler.h
silk_engine/gfx/pipeline/: compute_pipeline.cpp  compute_pipeline.h  default_render_pipeline.cpp  default_render_pipeline.h  graphics_pipeline.cpp  graphics_pipeline.h  includer.cpp  includer.h  material.h  pipeline.cpp  pipeline.h  pipeline_cache.cpp  pipeline_cache.h  pipeline_stage.h  render_graph.cpp  render_graph.h  render_pass.cpp  render_pass.h  render_pipeline.cpp  render_pipeline.h  render_stage.cpp  render_stage.h  shader.cpp  shader.h  subpass.cpp  subpass.h
silk_engine/gfx/queues/: command_queue.cpp  command_queue.h  queue.cpp  queue_family.cpp  queue_family.h
silk_engine/gfx/subrender/: mesh_subrender.cpp  mesh_subrender.h  particle_subrender.cpp  particle_subrender.h
silk_engine/gfx/sync/: event.cpp  event.h  fence.cpp  fence.h  semaphore.h
silk_engine/gfx/ui/: font.cpp  font.h
silk_engine/gfx/window/: glfw.cpp  glfw.h  monitor.cpp  monitor.h  surface.cpp  surface.h  swap_chain.cpp  swap_chain.h  window.cpp  window.h
silk_engine/io/: file.cpp  file.h
silk_engine/scene/: components.h  entity.h  instance.cpp  instance_images.cpp  instance_images.h  light.h  material.cpp  material.h  model.cpp  model.h  raw_model.cpp  raw_model.h  resources.cpp  resources.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  system.h
silk_engine/scene/camera/: camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  camera_controller_2D.cpp  camera_controller_2D.h  frustum.cpp  frustum.h
silk_engine/scene/meshes/: bezier_mesh.cpp  bezier_mesh.h  circle_mesh.cpp  circle_mesh.h  circle_outline_mesh.cpp  circle_outline_mesh.h  cube_mesh.cpp  cube_mesh.h  line_mesh.cpp  line_mesh.h  mesh.cpp  mesh.h  quad_mesh.cpp  quad_mesh.h  raw_mesh.h  rectangle_mesh.cpp  rectangle_mesh.h  rounded_rectangle_mesh.cpp  rounded_rectangle_mesh.h  sphere_mesh.cpp  sphere_mesh.h  tetrahedron_mesh.cpp  tetrahedron_mesh.h  text_mesh.cpp  text_mesh.h  triangle_mesh.cpp  triangle_mesh.h
silk_engine/sfx/: audio.cpp  audio.h  audio_context.cpp  audio_context.h  audio_device.h  audio_manager.h  microphone.h  raw_audio.cpp  raw_audio.h
silk_engine/src/: CMakeLists.txt  silk_engine.h
silk_engine/src/core/: application.cpp  application.h  base.h  entry_point.h  event.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  platform.h  time.h
silk_engine/src/gfx/: color.cpp  color.h  debug_messenger.cpp  debug_messenger.h  device_type.cpp  device_type.h  enums.cpp  enums.h  gpu_type.cpp  graphics.cpp  graphics.h  instance.cpp  instance.h  particle_system.cpp  particle_system.h  renderer.cpp  renderer.h
silk_engine/src/io/: file.cpp  file.h
silk_engine/src/scene/: AABB.h  batch.cpp  batch.h  camera.cpp  camera_controller.cpp  camera_controller.h  components.h  entity.cpp  entity.h  frustum.h  instance.cpp  instance.h  instance_images.cpp  instance_images.h  light.h  material.h  model.cpp  model.h  raw_model.cpp  raw_model.h  render_object.h  render_objects.h  resources.cpp  resources.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  system.h  vertex.h
silk_engine/src/sfx/: audio.cpp  audio.h  audio_context.cpp  audio_device.cpp  audio_format.cpp  audio_format.h  audio_manager.cpp  audio_manager.h  audio_source.cpp  audio_source.h  listener.cpp  listener.h  microphone.cpp  microphone.h  raw_audio.cpp  raw_audio.h
silk_engine/src/utils/: RNG.h  alarm.cpp  alarm.h  bit_utils.cpp  bit_utils.h  color.cpp  color.h  cooldown.h  debug_timer.cpp  debug_timer.h  delta.h  detected.h  file_utils.cpp  fixed_update.cpp  fixed_update.h  general_utils.h  math.h  string.h  sync_queue.h  sync_vector.h  thread_pool.cpp  (+5 more)
silk_engine/utils/: color.cpp  color.h  debug_timer.cpp  debug_timer.h  delta.h  free_list.h  general_utils.h  math.h  random.h  string.cpp  sync_queue.h  thread.h  thread_pool.cpp  thread_pool.h  time.h  uuid.h
src/: CMakeLists.txt  main.cpp  pch.h
src/core/: my_app.cpp  my_app.h  my_scene.cpp  my_scene.h
src/world/: block.h  chunk.cpp  chunk.h  world.cpp  world.h
tests/: CMakeLists.txt  main.cpp
vulkan_engine/src/: CMakeLists.txt  pch.h  vulkan_engine.h
(+431 files in other folders)
